crates/apollo-compiler/test_data/diagnostics/0011_syntactic_errors_from_parser.txt
Error: syntax error: expected at least one Selection in Selection Set
   ╭─[ 0011_syntactic_errors_from_parser.graphql:1:16 ]
   │
 1 │ query getName {}
   │                ┬  
   │                ╰── expected at least one Selection in Selection Set
───╯

